--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,10 @@ inputs:
     description: "Cache the build"
     required: false
     default: "true"
+  build-debug:
+    description: "Retain debug info and show debug console"
+    required: false
+    default: "false"
   build-platform:
     description: "Platform to build for"
     required: false
@@ -139,6 +143,9 @@ runs:
         DISTRO: ${{ steps.linux_discovery.outputs.DISTRO }}
       run: |
         build_options=""
+        if ${{ inputs.build-debug == 'true' }}; then
+          build_options+=' -debug'
+        fi
         if ${{ inputs.build-obfuscate == 'true' }}; then
           build_options+=' -obfuscated'
         fi
