expose wails -ldflags option

--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,10 @@ inputs:
     description: "Retain debug info and show debug console"
     required: false
     default: "false"
+  build-ldflags:
+    description: "Additional ldflags to pass to Go compiler. Must be quoted"
+    required: false
+    default: "false"
   build-platform:
     description: "Platform to build for"
     required: false
@@ -149,6 +153,10 @@ runs:
         build_options=""
         if ${{ inputs.build-debug == 'true' }}; then
           build_options+=' -debug'
+        fi
+        if [[ "${{ inputs.build-ldflags }}" != "false" ]]; then
+          ldflags_string="${{ inputs.build-ldflags }}"
+          build_options+=" -ldflags $ldflags_string"
         fi
         if ${{ inputs.build-obfuscate == 'true' }}; then
           build_options+=' -obfuscated'
