--- a/action.yml
+++ b/action.yml
@@ -156,7 +156,7 @@ runs:
         fi
         if [[ "${{ inputs.build-ldflags }}" != "false" ]]; then
           ldflags_string="${{ inputs.build-ldflags }}"
-          build_options+=" -ldflags $ldflags_string"
+          build_options+=" -ldflags=$ldflags_string"
         fi
         if ${{ inputs.build-obfuscate == 'true' }}; then
           build_options+=' -obfuscated'
@@ -169,8 +169,8 @@ runs:
           if [[ "$DISTRO" == '24.04' ]]; then
             tags_string+=" webkit2_41"
           fi
-          build_options+=" -tags $tags_string" 
-        elif [[ "${{ inputs.build-tags }}" == "false" && "$DISTRO" == '24.04' ]]; then 
+          build_options+=" -tags $tags_string"
+        elif [[ "${{ inputs.build-tags }}" == "false" && "$DISTRO" == '24.04' ]]; then
           build_options+=" -tags webkit2_41"
         fi
         if ${{ inputs.nsis == 'true' }}; then
