--- a/action.yml
+++ b/action.yml
@@ -176,7 +176,7 @@ runs:
         if ${{ inputs.nsis == 'true' }}; then
           build_options+=' -nsis'
         fi
-        echo "BUILD_OPTIONS=$build_options" >> "$GITHUB_OUTPUT"
+        echo "build_options=$build_options" >> "$GITHUB_OUTPUT"
     # Setup and configure GoLang
     - name: Setup GoLang
       uses: actions/setup-go@v5
@@ -215,10 +215,8 @@ runs:
     # Building step
     - name: Build App
       if: inputs.build == 'true'
-      env:
-        BUILD_OPTIONS: ${{ steps.build_options.outputs.BUILD_OPTIONS }}
       working-directory: ${{ inputs.app-working-directory }}
-      run: wails build --platform ${{inputs.build-platform}} -webview2 ${{inputs.wails-build-webview2}} -o ${{inputs.build-name}} $BUILD_OPTIONS
+      run: wails build --platform ${{inputs.build-platform}} -webview2 ${{inputs.wails-build-webview2}} -o ${{inputs.build-name}} ${{ steps.build_options.outputs.build_options }}
       shell: bash
     - name: Add macOS perms
       if: inputs.build == 'true' && runner.os == 'macOS'
